# wiretext-c

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
.cursor/commands/: stcm.md
public/: site.webmanifest
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AboutModal.tsx  ActionButtons.tsx  Canvas.tsx  ExportModal.tsx  ImportModal.tsx  LayersPanel.tsx  PropertiesPanel.tsx  SettingsModal.tsx  StatusBar.tsx  Toolbar.tsx
src/hooks/: useCanvas.ts  useIsMobile.ts  useKeyboard.ts  useSettings.ts  useShareUrl.test.ts  useShareUrl.ts
src/types/: index.ts
src/utils/: boxDrawing.ts  labelLayout.test.ts  labelLayout.ts  layerDragDrop.test.ts  layerDragDrop.ts  layerMigration.test.ts  layerMigration.ts  loadMerge.test.ts  loadMerge.ts  objectHierarchy.test.ts  objectHierarchy.ts  objectLabel.test.ts  objectLabel.ts  projectFile.test.ts  projectFile.ts  tauriCapabilities.test.ts
